@@ -1,5 +1,10 @@
 2007-05-22  Michael Smith <msmith@fluendo.com>
 
+	* flumotion/component/producers/playlist/playlist.py:
+	  Handle removing playlist files, and changing existing files.
+
+2007-05-22  Michael Smith <msmith@fluendo.com>
+
 	* flumotion/component/producers/playlist/playlist.xml:
 	  Add playlist-directory, base-directory properties. Make playlist
 	  optional.
